# llm-format

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_check.bat
examples/: basic_format.cpp  nested_schema.cpp  validate_only.cpp
include/: llm_format.hpp
